--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -37,10 +37,10 @@
 {% block content %}
 
 
-
+{% thumbnail  "350" as im %}
 <img align="center" src="{{ im.url }}"  width="100%" class="img-fluid">
-<img src="/media/products/банер_red_new.png" width="100%">
-
+<img src="/media/products/банер2.jpg" width="100%">
+{% endthumbnail %}
 
 
 <style>
