--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -3,9 +3,9 @@
 {% load static %}
 {% load thumbnail %}
 {% block style %}
-
-
+<link rel="shortcut icon" href="/media/products/favicon.ico" type="image/x-icon»>
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
-  <title>005.ru</title>
+  <title>005 Print</title>
   <style>
   	.card{
   		    height: 300px;
@@ -55,10 +55,10 @@
 
 
 
-
   {% include 'products/navbar.html' %}
-
+  
   <link rel="shortcut icon" href="/media/products/favicon.ico" type="image/x-icon»>
+
       {% if messages %}
       <div class="messages container mt-2">
           {% for message in messages %}
