--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -105,5 +105,6 @@
 
 <i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
 
+<p class="text-center">copyright © 2021 . all rights reserved.</p>
 
 {% endblock %}
