--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -48,7 +48,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/"></a>
       </li>
-      <a class="nav-link active" href="/"><i class="fas fa-envelope"></i> info@005.ru</a>
+      <a class="nav-link active" href="mailto:info@005.ru"><i class="fas fa-envelope"></i>info@005.ru</a>
       <a class="nav-link active" href="/"><i class="fas fa-phone"></i> +7(495) 740-38-93</a>
     </li>
     <li class="nav-item">
