--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -95,7 +95,10 @@
 
 <br>
 
-<h6 class="text-center"><span class="text-muted"> <i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru 
+
+
+
+<h6 class="text-center"><span class="text-muted"> <a href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
 
   <a href="/">
  
@@ -104,6 +107,8 @@
   </a>
 
 <i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
+   
+
 
 <p class="text-center">copyright © 2021 . all rights reserved.</p>
 
