--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -53,7 +53,7 @@
   }
 </style>
 
-<br><br><br>
+<br><br><br><br>
 
 
 
@@ -77,60 +77,43 @@
   </div>
 </div>
 
-<br><br>
+<br><br><br><br>
 
 
 
-
-<div>
-  <div style="position:absolute;z-index:10000;top:650px;margin-left:750px;">
-    <i class="fa fa-2x fa-spin fa-refresh"></i>  
-
-    <div style="position:absolute;z-index:10000;top: -3 px;margin-left:-240px;">
-
-  <div><h5 class="card-title"> <svg xmlns="http://www.w3.org/2000/svg" width="48" height="28" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
-    <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
-    <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
-  </svg> </span></a></h5></span></div>
-<!--
-  <h5 class="card-title"><span class="text-muted"></i> мгновенный расчёт</h5></span>-->
-  <h5 class="card-title"> мгновенный расчёт</h5></span>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <h5 class="card-title"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></i> </h5></span>
+      <h5 class="card-title"> высокое качество</h5></span>   
+      <h7 class="card-title"><span class="text-muted">контроль  на всех этапах ,<br> довольные клиенты   </h7></span> 
+    </div>
+    <div class="col-sm">
+      <div><svg xmlns="http://www.w3.org/2000/svg" width="48" height="28" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
+        <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
+        <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
+      </svg> </span></a></span></div>
+      <h5 class="card-title"> мгновенный расчёт</h5></span>
   <h7 class="card-title"><span class="text-muted">очень простой калькулятор расчёта  в 2 клика  </h7></span>
-  </div>
 
     </div>
-
-      <div style="position:absolute;z-index:10000;top:660px;margin-left:170px;">
-        <div class="rating"> 
-
-          <h5 class="card-title"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></i> </h5></span>
-          <h5 class="card-title"> высокое качество</h5></span>
-          <h7 class="card-title"><span class="text-muted">контроль качества на всех этапах,<br> довольные клиенты   </h7></span>
-         
-        </div>  
-        </div>
-        <div style="position:absolute;z-index:10000;top:660px;margin-left:870px;">
-          <!--   <h6 class="card-title"><span class="text-muted">   <h2><i class="fas fa-truck"></i></h2></span></a></h6>-->
-          <h5 class="card-title"><i class="fa fa-shopping-cart" ></i></h5></span>
-          <h5 class="card-title">онлайн</h5></span>
-          <h7 class="card-title"><span class="text-muted"> покупка из дома/работы <br>  поддержка по запросу</h7></span>
-           </div>
-
-        <div style="position:absolute;z-index:10000;top:657px;margin-left:1170px;">
-
-          <h5 class="card-title"><span  <i class="fas fa-truck"></i></h5></span>
-          <h5 class="card-title">доставка </h5></span>
-          <h7 class="card-title"><span class="text-muted"> доставка  до  вашего склада<br>силами транспортной компании </h7></span>
-          </div>
-
-        </div>
+    <div class="col-sm">
+      <h5 class="card-title"><i class="fa fa-shopping-cart" ></i></h5></span>
+      <h5 class="card-title">онлайн</h5></span>
+      <h7 class="card-title"><span class="text-muted"> покупка из дома/работы <br>  поддержка по запросу</h7></span>
+      
+    </div>
+    <div class="col-sm">
+      <h5 class="card-title"><span  <i class="fas fa-truck"></i></h5></span>
+      <h5 class="card-title">доставка </h5></span>
+      <h7 class="card-title"><span class="text-muted"> доставка  до  вашего склада<br>силами транспортной компании </h7></span>
+      </div>
+    </div>
+  </div>
+</div>
 
 
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
+
           <br>
           <br>
           <br>
