category_products image resize

--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -40,22 +40,22 @@
 
 			
 					<a  href="/product/{{ product.slug }}">
-
+<!-- 
 					{% thumbnail product.mainimage "300" as im %}
 					<img align="center" src="{{ im.url }}"  class="img-fluid">
 					
-					{% endthumbnail %}  
-
+					{% endthumbnail %}  -->
+					<img src="{{ product.mainimage.url }}" style="width: 100%; height: 250px;"> 
 					</a>
 
-				<!--	<img src="{{ product.mainimage.url }}" style="width: 100%; height: 250px;"> -->
+					
 				</div>
 				<figcaption class="info-wrap">
 					<!-- Старый -->
 
 					<div class="card-body">
-						<H6 STYLE="font-family: 'Courier New'"></H6>
-					 <h6 class="card-title"><a href="/product/{{ product.slug }}"><p style="color:rgb(36, 163, 60)">{{ product.name }}></p></a></h6>  
+						
+					 <h5 class="card-title"><a href="/product/{{ product.slug }}"><p style="color:rgb(36, 163, 60)">{{ product.name }}></p></a></h5>  
 				
 				 <h6 class="card-title"><span class="text-muted">   {{ product.preview_text}} </span></a></h6>
 				  
