--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -13,7 +13,6 @@
    <div class="container">
 	
    <h2 class="text-center">Продукты</h2>
-   <H6 STYLE="font-family: 'avenir next rounded std'"></H6>
    <br>
 	<div class="row">
 
@@ -22,7 +21,7 @@
     <div class="row">
     <div class="col-md-3">
 	
-		<H6 STYLE="font-family: 'avenir next rounded std'">
+	
 			<form method="get">
 				{{ filter.form| crispy }}
 			<button type= "submit"
@@ -40,12 +39,12 @@
 
 			
 					<a  href="/product/{{ product.slug }}">
-<!-- 
+
 					{% thumbnail product.mainimage "300" as im %}
-					<img align="center" src="{{ im.url }}"  class="img-fluid">
+					<img align="center" src="{{ im.url }}"  style="width: 100%; 250px;"; class="img-fluid">
 					
-					{% endthumbnail %}  -->
-					<img src="{{ product.mainimage.url }}" style="width: 100%; height: 250px;"> 
+					{% endthumbnail %}  
+				<!-- 	<img src="{{ product.mainimage.url }}" style="width: 100%; height: 250px;"> -->
 					</a>
 
 					
