--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 {% for product in products %}
+{% load static %}
 
 <div class="container my-5">
     
@@ -96,6 +97,78 @@
 </div>
 
 <hr />
+
+
+<html>
+   <head>
+
+      
+      <script language="JavaScript">
+         <!--
+
+         // Показывает скрытое, скрывает видимое
+         function flipflop( id )
+         {
+
+          // id -- идентификатор элемента, который надо скрыть или показать
+
+          // получаем этот элемент
+          element = document.getElementById( id );
+
+          // если таковой в документе существует
+          if( element )   
+             // меняем ему видимость
+             element.style.display = element.style.display == "none" ? "" : "none";   
+         }
+       
+      </script>
+
+   </head>
+
+   <body>
+
+      <ul>
+
+         <li>
+
+            <p><a href="javascript:flipflop('animals');">у вас слетает введенный тираж? </a></p> 
+           
+            <ul id="animals" style="display: none;">
+              <li><div id="browse_app">
+
+                значение тиража не слетает,
+
+результат записан ниже в строке  розовым цветом
+       
+         </li>
+
+          </ul>
+
+
+       
+
+            <li>
+   
+               <p><a href="javascript:flipflop('an');">вы вводите один тираж, а на экране вы видете другой? </a></p> 
+              
+               <ul id="an" style="display: none;">
+                 <li><div id="browse_app">
+   
+                  Всё нормально, алгоритм ориентируется на min или max тиражи
+          
+            </li>
+   
+             </ul>
+
+         
+          
+
+   </body>
+
+</html>
+
+
+
 
 <div class="container-fluid">
     <table class="table table-striped table-sm" id="my_products">  
