--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -53,17 +53,15 @@
   }
 </style>
 
-<br><br><br>
+<br><br><br><br><br>
 
 
 
 <div class="container">
   <div class="row">
-    <div class="col-sm">
-    <!--  <span class="icon"><i class="fa fa-search"></i> поиск продукта по названию</span>-->
-    </div>
-    <div class="col-sm">
-      <H6 STYLE="font-family: 'avenir next rounded std'">
+
+    <div class="col-md-9">
+   
         <form method="get">
           {{ filter.form| crispy }}
     </div>
@@ -112,7 +110,13 @@
   </div>
 </div>
 
+<!--
+<a data-role="button" data-inline="true" href="gmail.html">
+  Poczta Gmail
+  </a>
 
+-->
+  
 
           <br>
           <br>
