--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -13,24 +13,30 @@
 
 	<H6 STYLE="font-family: 'avenir next rounded std'">
    <div class="container">
-	
+	<br>  <br>  
    <h2 class="text-center">Продукты</h2>
    <br>
+
+   <div class="container">
 	<div class="row">
-
-
   
-    <div class="row">
-    <div class="col-md-3">
+	  <div class="col-md-8">
 	
-	
-			<form method="get">
-				{{ filter.form| crispy }}
-			<button type= "submit"
-		class= "btn btn-success btn-buy">
-		  искать 
+		  <form method="get">
+			{{ filter.form| crispy }}
+	  </div>
+	  <div class="col-sm">
+		<button type= "submit"
+		
+		  type="button" class="btn btn-success">Искать</button>
+  
 		</button>
-		</div> 
+
+	  </div>
+	</div>
+  </div>
+  <br>  <br>
+
     <div class="col-md-9">
 		<div class="row">
 			{% for product in filter.qs %}
