--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -55,10 +55,13 @@
   </style>
 </head>
 <body>
+<br>
 
 
+<p style="color:rgb(36, 163, 60)" class="text-center"><img src="/media/products/logo_rose.png" width="60" height="45"><i class="fas fa-users"></i> дружественный полиграфический сервис: <i class="fas fa-user-friends"></i> поддержка, <i class="fas fa-eye"></i> визуализация, <i class="fas fa-calculator"></i> мгновенный расчёт, </i> доставка <i class="fas fa-truck"></i></i></p>
 
   {% include 'products/navbar.html' %}
+ 
   
   <link rel="shortcut icon" href="/media/products/favicon.ico" type="image/x-icon»>
 
@@ -101,7 +104,7 @@
 
 
 
-<h6 class="text-center"><span class="text-muted"> <a href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
+<p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
 
   <a href="/">
  
@@ -116,3 +119,5 @@
 <p class="text-center">copyright © 2021 . all rights reserved.</p>
 
 {% endblock %}
+
+
