--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -15,6 +15,8 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/74638276" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
+
+
 {% extends 'products/base.html' %}
 {% load thumbnail %}
 
@@ -77,7 +79,12 @@
 
 <br><br>
 
-
+<!--
+<svg xmlns="http://www.w3.org/2000/svg" width="48" height="28" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
+  <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
+  <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
+</svg>
+-->
 
 <div class="container">
   <div class="row">
@@ -87,10 +94,7 @@
       <h7 class="card-title"><span class="text-muted">контроль  на всех этапах ,<br> довольные клиенты   </h7></span> 
     </div>
     <div class="col-sm">
-      <div><svg xmlns="http://www.w3.org/2000/svg" width="48" height="28" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
-        <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
-        <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
-      </svg> </span></a></span></div>
+      <div><i class="fas fa-calculator"></i> </span></a></span></div>
       <h5 class="card-title"> мгновенный расчёт</h5></span>
   <h7 class="card-title"><span class="text-muted">очень простой калькулятор расчёта  в 2 клика  </h7></span>
 
