--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -4,14 +4,24 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
 
+    
  
-     
+
+
+   
+      <br>
+
+      <svg xmlns="http://www.w3.org/2000/svg" width="34" height="24" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
+        <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
+        <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
+      </svg>  выбор за 60 сек.
   
+  <!--
       <span class="align-middle"> <a href="/">
 
          <img src="/media/products/logo_rose.png" width="90" height="60">
       
-      </a></span>
+      </a></span> -->
    
  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +31,7 @@
     <ul class="navbar-nav ml-auto">
      
       <li {% if request.path == 'contact' %}class="nav-item active"{% else %}class="nav-item"{% endif %}>
-        <a class="nav-link active" href="/about.html/">о нас <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="/about.html/"><strong>о нас</strong> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/"></a>
