allign calc at home page

--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -94,8 +94,9 @@
       <h7 class="card-title"><span class="text-muted">контроль  на всех этапах ,<br> довольные клиенты   </h7></span> 
     </div>
     <div class="col-sm">
-      <div><i class="fas fa-calculator"></i> </span></a></span></div>
-      <h5 class="card-title"> мгновенный расчёт</h5></span>
+      <div> </span></a></span></div>
+      <h5 class="card-title"> <i class="fas fa-calculator"></i> 
+        <h5 class="card-title">  мгновенный расчёт</h5></span>   
   <h7 class="card-title"><span class="text-muted">очень простой калькулятор расчёта  в 2 клика  </h7></span>
 
     </div>
