--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -58,7 +58,8 @@
 <br>
 
 
-<p style="color:rgb(36, 163, 60)" class="text-center"><img src="/media/products/logo_rose.png" width="60" height="45"><i class="fas fa-users"></i> дружественный полиграфический сервис: <i class="fas fa-user-friends"></i> поддержка, <i class="fas fa-eye"></i> визуализация, <i class="fas fa-calculator"></i> мгновенный расчёт, </i> доставка <i class="fas fa-truck"></i></i></p>
+
+<p style="color:rgb(36, 163, 60)" class="text-center"><a href="/"><img src="/media/products/logo_rose.png" width="60" height="45"></a><i class="fas fa-users"></i> дружественный полиграфический сервис: <i class="fas fa-user-friends"></i> поддержка, <i class="fas fa-eye"></i> визуализация, <i class="fas fa-calculator"></i> мгновенный расчёт, </i> доставка <i class="fas fa-truck"></i></i></p>
 
   {% include 'products/navbar.html' %}
  
