--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -56,12 +56,14 @@
 </head>
 <body>
 <br>
+ 
 
 
 
-<p style="color:rgb(36, 163, 60)" class="text-center"><a href="/"><img src="/media/products/logo_rose.png" width="60" height="45"></a><i class="fas fa-users"></i> дружественный полиграфический сервис: <i class="fas fa-user-friends"></i> поддержка, <i class="fas fa-eye"></i> визуализация, <i class="fas fa-calculator"></i> мгновенный расчёт, </i> доставка <i class="fas fa-truck"></i></i></p>
 
-  {% include 'products/navbar.html' %}
+  <p style="color:rgb(36, 163, 60)" class="text-center"><a href="/"> <img src="/media/products/logo_rose.png" width="60" height="45"></a>                            <i class="fas fa-users"></i> дружественный полиграфический сервис: <a class="text-muted" class="fas fa-users"></i>поддержка, <i class="fas fa-eye"></i> визуализация, <i class="fas fa-calculator"></i> мгновенный расчёт, </i> доставка <i class="fas fa-truck"></i></i></p>
+  
+    {% include 'products/navbar.html' %}
  
   
   <link rel="shortcut icon" href="/media/products/favicon.ico" type="image/x-icon»>
@@ -122,3 +124,4 @@
 {% endblock %}
 
 
+<p style="color:rgb(36, 163, 60)" class= "text-muted"> <a href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
