--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -9,13 +9,13 @@
 
 
    
-      <br>
-
+    
+    <strong> поиск продукта
       <svg xmlns="http://www.w3.org/2000/svg" width="34" height="24" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
         <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
         <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
-      </svg>  выбор за 60 сек.
-  
+      </svg>  
+    </strong>
   <!--
       <span class="align-middle"> <a href="/">
 
@@ -68,7 +68,7 @@
       {% if request.user.is_authenticated %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'mainapp:cart-home' %}">
-          <i class="fa fa-shopping-cart"></i>  Корзина  
+          <i class="fa fa-shopping-cart"></i> <strong>Корзина  </strong> 
           <span class="badge badge-light">{{ request.user| cart_total }}</span>
         </a>
       </li>
@@ -82,7 +82,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <!--<a class="dropdown-item" href="#">Панель</a>-->
-          <a class="dropdown-item" href="{% url 'checkout:oderView' %}">Заказы</a>
+          <a class="dropdown-item" href="{% url 'checkout:oderView' %}"><strong> Заказы</strong> </a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="/accounts/logout/">выход из системы</a>
         </div>
