--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -107,7 +107,7 @@
 
 
 
-<p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
+<p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
 
   <a href="/">
  
@@ -124,4 +124,3 @@
 {% endblock %}
 
 
-<p style="color:rgb(36, 163, 60)" class= "text-muted"> <a href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
