--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -85,7 +85,7 @@
 
             {% endfor %}
             <div style="position:absolute;z-index:10000;top:500 px;margin-left: 500 px;">
-                <h4> </h4><input type="submit" class= "btn btn-secondary btn-buy" value="Расчитать" />
+                <h4> </h4><input type="submit" class= "btn btn-secondary btn-buy" value="Рассчитать" />
                 <!--<p style="color:rgb(229, 152, 147)"></p><input type="submit" class= "btn btn-success btn-buy" value=Расчитать style="color:rgb(229, 152, 147)"-->
                 </div>
             </div>
