--- a/products/templates/products/about.html
+++ b/products/templates/products/about.html
@@ -2,50 +2,39 @@
     
     {% extends 'products/base.html' %}
     {% load thumbnail %}
-    
-    
-    
- 
-  
-    
-    
-    
     {% block content %}
   
     <div class="blog">
     
       <H6 STYLE="font-family: 'avenir next rounded std'">
      <div class="container">
-      <br>
-     <h2 class="text-center">Добрый день, друзья!</h2>
-     <H6 STYLE="font-family: 'avenir next rounded std'"></H6>
-     <br>
-     <h5 class="text-left">
-     <H5 STYLE="font-family: 'avenir next rounded std'">
 
-      
-
-        Если  заниматься чем-то<br><br> <p style="color:rgb(229, 152, 147)">больше 20 лет,</p> то накопится большой опыт, он кристаллизуется и им захочется поделиться. <br><br> <p>За это время пришло понимание, что:<p>
-            <p style="color:rgb(229, 152, 147)">* всей массой информации можно удобно пользоваться,<p style="color:rgb(229, 152, 147)">* она максимально понятна, </p><p><p style="color:rgb(229, 152, 147)">* все полиграфические решения уже найдены.</p>  </p>
-        
-        <p>Прежде всего, нужно выбрать надежных поставщиков, отследить качество,
-         понятно технически грамотно описать и визуализировать продукт,
+    <!--- 
+      Мы поставили себе задачу<br><br> <p style="color:rgb(229, 152, 147)">сделать максимально дружественный, удобный полиграфическмй сервис,</p> <br> где можно увидеть изображение, ввести тираж и сразу заказать продукцию,<p>
+        <br><br>
+        <p style="color:rgb(229, 152, 147)">при этом вам не обязательно обладать техническими знаниями<p style="color:rgb(229, 152, 147)">однако вы гарантировано получите понятный и эффектный результат <p style="color:rgb(229, 152, 147)">по разумной цене и в нужные сроки </p><p><p style="color:rgb(229, 152, 147)"></p>  </p>
+    
+<br><br>
+    
+        <p>Мы стараемся выбирать самых надежных и ответственных поставщиков,<p>следить за качеством,
+         взять на себя полную ответственность за всё, <p>визуализировать продукт,
         посчитать его стоимость, срок производства и доставки.
-        <p> Ну и, конечно, всегда быть на стороне клиента.
+         --> 
         
        
             <h1><div class="blog">
-
-                <H1 STYLE="font-family: 'avenir next rounded std'"><img align="center" 
-                <br>
-                за 60 cекунд
+              <h3 class="text-left">Добрый день, друзья!</h3>
+              <br>
+                <H4 STYLE="font-family: 'avenir next rounded std'"><img align="center" 
+                <br> <br>
+                <h3><p class="text-center" style="color:rgb(229, 152, 147)">На этом сервисе  за 60 cекунд 
 
  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="68" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
     <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
     <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
-  </svg>  найти
-  <p>•идеальное     решение •	 узнать цену •	 заказать
- </h1>
+  </svg>  можно найти
+  идеальное  полиграфическое решение  •	узнать цену  • и заказать то, что вам нужно
+ </h3>
 
             
 </div>
