--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -88,29 +88,50 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm">
-      <h5 class="card-title"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></i> </h5></span>
-      <h5 class="card-title"> высокое качество</h5></span>   
-      <h7 class="card-title"><span class="text-muted">контроль  на всех этапах ,<br> довольные клиенты   </h7></span> 
-    </div>
-    <div class="col-sm">
-      <div> </span></a></span></div>
-      <h5 class="card-title"> <i class="fas fa-calculator"></i> 
-        <h5 class="card-title">  мгновенный расчёт</h5></span>   
-  <h7 class="card-title"><span class="text-muted">очень простой калькулятор расчёта  в 2 клика  </h7></span>
 
+
+   <!--    <a data-role="button" data-inline="true" href="quality.html"> -->
+      <div class="col-sm">
+        <h5 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-star"></i></h5></span>
+        <h5  style="color:rgb(36, 163, 60)"  class="card-title"> высокое качество</h5></span>   
+        <h7 class="card-title"><span class="text-muted">контроль качества<br> на всех этапах  </h7></span> 
+      </a> 
     </div>
-    <div class="col-sm">
-      <h5 class="card-title"><i class="fa fa-shopping-cart" ></i></h5></span>
-      <h5 class="card-title">онлайн</h5></span>
-      <h7 class="card-title"><span class="text-muted"> покупка из дома/работы <br>  поддержка по запросу</h7></span>
-      
+
+
+   
+
+ 
+   
+
+  <!-- <a data-role="button" data-inline="true" href="calc.html"> -->
+      <div class="col-sm">
+      <h5 style="color:rgb(0, 0, 0)" class="card-title"> <i class="fas fa-calculator"></i> 
+      <h5  style="color:rgb(36, 163, 60)" class="card-title">  мгновенный расчёт</h5></span>   
+      <h7 class="card-title"><span class="text-muted">очень простой калькулятор расчёта  в 2 клика  </h7></span>
+      </a>
     </div>
+   
+  
+
+  <!--  <a data-role="button" data-inline="true" href="online.html"> -->
     <div class="col-sm">
-      <h5 class="card-title"><span  <i class="fas fa-truck"></i></h5></span>
-      <h5 class="card-title">доставка </h5></span>
-      <h7 class="card-title"><span class="text-muted"> доставка  до  вашего склада<br>силами транспортной компании </h7></span>
-      </div>
+      <h5 style="color:rgb(0, 0, 0)" class="card-title"><i class="fa fa-shopping-cart" ></i></h5></span>
+      <h5  style="color:rgb(36, 163, 60)" class="card-title">онлайн заказ</h5></span>
+      <h7 class="card-title"><span class="text-muted"> при необходимости <br> <i class="fas fa-headset"></i> поддержка по запросу</h7></span>
+    </a>
+    </div>
+
+     <!--  <a data-role="button" data-inline="true" href="technologies.html"> -->
+    <div class="col-sm">
+    <h5 style="color:rgb(0, 0, 0)" class="card-title"><span><i class="fas fa-fill-drip"></i></h5></span>
+    <h5  style="color:rgb(36, 163, 60)"  class="card-title">печатные технологии </h5></span>
+    <h7 class="card-title"><span class="text-muted"> помощь<br>рекомендации </h7></span>
+    </a>
+    </div>
+
+
+
     </div>
   </div>
 </div>
@@ -169,7 +190,7 @@
 
 	    <div class="card-body">
         <H6 STYLE="font-family: 'avenir next rounded std'"></H6>
-         <h6 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(36, 163, 60)">{{ product.name }} ></p></a></h6>
+         <h5 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(36, 163, 60)">{{ product.name }} ></p></a></h5>
 
   
  <h6 class="card-title"><span class="text-muted"> {{ product.preview_text}}</span></a></h6>
@@ -199,7 +220,7 @@
     
     <a href="/">
 
-    <img src="/media/products/banner.png" width="100%">
+   <!-- <img src="/media/products/banner.png" width="100%"> -->
    
   </a>
 
