--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -59,9 +59,28 @@
  
 
 
+<!-- <p style="color:rgb(36, 163, 60)" class="text-center"><a href="/"> <img src="/media/products/logo_rose.png" width="90" height="60"></a>                            <i class="fas fa-users"></i> дружественный полиграфический сервис: <a class="text-muted" class="fas fa-users"></i><i class="fas fa-headset"></i> поддержка, <i class="fas fa-eye"></i> визуализация, <i class="fas fa-calculator"></i> мгновенный расчёт, </i> доставка <i class="fas fa-truck"></i></i></p> -->
+
+  
+
+   
+<p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a> 
+
+  <a href="/">
+ 
+      <img src="/media/products/logo_rose.png" width="97" height="65">
+ 
+  </a>
+
+<i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
 
 
-  <p style="color:rgb(36, 163, 60)" class="text-center"><a href="/"> <img src="/media/products/logo_rose.png" width="60" height="45"></a>                            <i class="fas fa-users"></i> дружественный полиграфический сервис: <a class="text-muted" class="fas fa-users"></i><i class="fas fa-headset"></i> поддержка, <i class="fas fa-eye"></i> визуализация, <i class="fas fa-calculator"></i> мгновенный расчёт, </i> доставка <i class="fas fa-truck"></i></i></p>
+
+
+
+
+
+    
   
     {% include 'products/navbar.html' %}
  
@@ -105,7 +124,7 @@
 <br>
 
 
-
+<!--
 
 <p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
 
@@ -117,7 +136,7 @@
 
 <i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
    
-
+-->
 
 <p class="text-center">copyright © 2021 . all rights reserved.</p>
 
