--- a/products/templates/products/delivery.html
+++ b/products/templates/products/delivery.html
@@ -1,124 +1,105 @@
+{% extends 'products/base.html' %}
+{% load crispy_forms_tags %}
+{% block content %}
+
+
+
+
+
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+ </head>
+ <body> 
+  <br><br><br>
+ <center>
+  <button class="btn btn-success float-center" id="fa" name="button" value="True" onclick="myFunction()">Куда везём?</button>
+  </center>  
+ </body> 
+
+
+
+      {% if request.user.is_authenticated %}
+
+
+
+
+
+
+      
+   
+
+                <!--      <input type="checkbox" name="option1" id="option1" value="True" checked> Подтвердить
+                           <button class="btn btn-success float-right" id="fa" name="button" value="True" onclick="myFunction()">Подтвердить заказ</button> -->
+                           </form>
+                           <p id="demo"></p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <script>
+            function myFunction() {
+              window.location.href = "/checkout/";
+            }
+         </script>
+      </div>
+
+      
+      <br><br><br>
+      
+      <div class="card mb-5" style="height: auto">
+         <div class="card-body">
+     </script>
+
+
+
+     
+      {% else %}
+      
+      <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">пожалуйста, зарегистрируйтесь,чтобы  мы понимали,кому доставлять заказ</p></span></a></h6>
+      
+      {% endif %}
+
+     
+
+
+
+
+
+     Стоимость доставки расчитывается отдельно и составляет от 400 рублей за груз до 5 кг (<i class="fas fa-walking"></i>) 
+     и от 1500 рублей (<i class="fas fa-truck"></i>)за груз от 5 килограмм в зависимости от веса и расстояния и времени суток по г. Москве. Доставка в другие города рассчитывается согласно тарифам транспортной компании конкретного региона.
+
+            
+         </div>
+
+     <br> 
+   
+            
+      
+   </div>
+
+
+
+
+
 
  
-    
-    {% extends 'products/base.html' %}
-    {% load thumbnail %}
-    
-    
-    
-    
-    {% load crispy_forms_tags %}
-    
-    
-    
-    
-    {% block content %}
-    
-    <h5 class="text-center"><span class="text-muted"></h5></span>
-      
-    <div class="blog">
-    
-      <H6 STYLE="font-family: 'avenir next rounded std'">
-     <div class="container">
-      
-     <h2 class="text-center">доставка</h2>
+
 
    
-     <br>
-  
 
-     Стоимость доставки расчитывается отдельно и составляет 300 рублей за груз до 5 кг (<i class="fas fa-walking"></i>) по г. Москва
-     и 2500 рублей (<i class="fas fa-truck"></i>)за груз более 5 кг. 
+ 
 
-   
-     <br>
-      <div class="row">
+ 
+
+
+ 
 
 
 
-       
-        <!-- <div class="card"> -->
-         <!-- <div class="card-img">
-          <img align="center" src="images/posts/polit.jpg" class="img-fluid">
-         </div> -->
-    
-        {% for product in filter.qs %}
-      
-      <!-- <div class="tile__body list-default__parent"> -->
-    
-    
-        <div class="col-md-3 col-lg-3 col-sm-6">
-        
-    
-            <div class="card">
-             <div class="card-img">
-              <!-- <img align="center" src="{{ product.mainimage.url }}" class="img-fluid"> -->
-              <!-- <img align="center" src="media/{{ product.mainimage }}" class="img-fluid"> -->
-              <!-- { % thumbnail 'product.mainimage' "50" as im % } -->
-              
-                  {% thumbnail product.mainimage "300" as im %}
-                    <img align="center" src="{{ im.url }}" alt="not found" class="img-fluid">
-                    <!-- { % empty % }
-                    <p>No image</p> -->
-                {% endthumbnail %}
-             </div>
-    
-            <div class="card-body">
-            <H6 STYLE="font-family: 'Courier New'"></H6>
-             <h6 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(36, 163, 60)">{{ product.name }}></p></a></h6>
-     {{ product.preview_text}} 
-      
-      
-             <p class="card-text">
-    
-              
-              </p>
-             </div>
-    
-            </div>
-    
-    
-      
-      </div>
-           
-        
-              
-            {% endfor %}
-    
-       </div>
-      </div>
-     </div>
-    </div>
-    </div>
-    </div>
-    
-      
-    
-    
-      <div>
-        <h6 class="text-center"></h6> 
-        
-        </div>
-    <br>
-    <br>
-    <br>
-    
-    <div 
-    
 
-    
-              </div>
-    
-    {% endblock %}
-    
-    
-    
-    
-    
-    <body>
-    
-      <video controls loop>
-        <source src="media/box_production1.mp4" type="video/mp4">
-       
-        Your browser does not support the video tag.
-      </video>
+
+
+
+
+{% endblock %}
