--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -22,33 +22,46 @@
     {% endthumbnail %}
   <!--    <div> <a href="#"><img src="/media/{{product.mainimage }}" style="width: 450px"></a></div> -->
  <!-- <div> <a href="#"><img src="/media/{{product.box_size.mainimage }}" style="width: 450px"></a></div> -->
-     
-     <h2>мы готовы начать</h2>
+ 
+
+    <!--  <h2>мы готовы начать</h2> -->
     <!-- <h6 class="card-title"><span class="text-muted">заказать продукцию можно только после регистрации</span></a></h6>-->
     
 
 
-{% if request.user.is_authenticated %}
-<a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-secondary text-uppercase"> <i class="fas fa-shopping-cart"></i>  Заказать </a>
-{% else %}
 
-<h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ</p></span></a></h6>
-
-{% endif %}
     
-     
-    </div> 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+<body> 
+
+
+
+
+
+
+
+
+<center>
+   {% if request.user.is_authenticated %}
+   <a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-success text-uppercase"> <i class="fas fa-shopping-cart"></i>  Заказать </a>
+   {% else %}
+   
+  <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ</p></span></a></h6>
+  
+
+   {% endif %}
+ </center>  
+</body> 
+
 
     <!-- slider-product.// -->
     </article> <!-- gallery-wrap .end// -->
             </aside>
             <aside class="col-sm-7">
     <article class="card-body p-5">
-        <h3 class="title mb-3">{{ object.name }}</h3>
-   
-    <p class="price-detail-wrap"> 
-       
- 
+  
+  
         
         <td>
         <td>{{object.tirazh}}</td>
@@ -65,48 +78,108 @@
         </span> 
         
     </td>   
-
+<ul>
     <h3 class="title mb-3">{{ product.name }}</h3>
+</ul>
+<ul>
+    <div onmouseover="this.style.color='green';" onmouseout="this.style.color='black';">{{product.detail_text }}</div>
+ 
+</ul>
   
-    <h6 class="title mb-3">{{product.detail_text }}</h3>
+   <!-- <h6 class="title mb-3">{{product.detail_text }}</h3> -->
 <div class="container-fluid">
     <form id="product-form">
         <div class="row">
             {% csrf_token %}
-            <div class="form-group col-4">
+            <div class="form-group col-1">
 
             {% for field in form %}
             
-                <label class="col-12">{{ field.label }}</label>
-                {{ field }}
-            
-            
-            
-
+                <label class="col-4">{{ field.label }}</label>
+          
+          <ul>     {{ field }}   </ul> 
+              
             {% endfor %}
+            
+           
+<!--
+
             <div style="position:absolute;z-index:10000;top:500 px;margin-left: 500 px;">
+                <br>
                 <h4> </h4><input type="submit" class= "btn btn-secondary btn-buy" value="Рассчитать" />
-                <!--<p style="color:rgb(229, 152, 147)"></p><input type="submit" class= "btn btn-success btn-buy" value=Расчитать style="color:rgb(229, 152, 147)"-->
-                </div>
+                <p style="color:rgb(229, 152, 147)"></p><input type="submit" class= "btn btn-success btn-buy" value=Расчитать style="color:rgb(229, 152, 147)"-->
+            
             </div>
+            
             <input type="hidden" id="custId" name="product_id" value="{{ product.id }}">
             
            
             
            
-        </div>
-    <form>  
-</div>
+        </div> 
+  
+<!--</div>  подчеркивание на всю страницу --> 
 
 <hr />
+<ul>
+ <input type="submit" class= "btn btn-secondary btn-buy" value="Рассчитать" />
 
-
+</ul>
 <html>
+  
    <head>
 
-      
+
+  
+    <div class="container-fluid">
+        <table class="table table-striped table-sm" id="my_products">  
+            <thead>
+                <tr>
+                    <th>Размер</th>
+                    <th>Дата изготовления</th>
+                    <th>Тираж(шт.)</th>
+                    <th>Цена(руб.)</th>
+                    
+                    
+                </tr>
+            </thead>
+            <tbody>
+               
+    
+    <!--
+              
+    
+            
+            <tr>
+                <td><p style="color:rgb(229, 152, 147)">{{product.box_size}}</p></td>
+                <td><p style="color:rgb(229, 152, 147)">{{product.timeplus}}</p></td>
+                <td><p style="color:rgb(229, 152, 147)">{{product.tirazh}}</p></td>
+                <td><p style="color:rgb(229, 152, 147)">{{product.calc}}</p></td>
+            
+    
+            </tr>   -->
+    
+            <tr>
+                <td><p  style="color:rgb(36, 163, 60)">{{product.box_size}}</p></td>
+                <td><p  style="color:rgb(36, 163, 60)">{{product.timeplus}}</p></td>
+                <td><p style="color:rgb(36, 163, 60)">{{product.tirazh}}</p></td>
+                <td><p style="color:rgb(36, 163, 60)">{{product.calc}}</p></td>
+            
+    
+            </tr>
+    
+    
+            </tbody>
+        </table>
+
+        
+     
+    </div> 
+
+
+    
       <script language="JavaScript">
-         <!--
+       
 
          // Показывает скрытое, скрывает видимое
          function flipflop( id )
@@ -131,16 +204,22 @@
 
       <ul>
 
+       
+
          <li>
 
+           
+           
+           
+            
+            
             <p><a href="javascript:flipflop('animals');">у вас слетает введенный тираж? </a></p> 
            
             <ul id="animals" style="display: none;">
               <li><div id="browse_app">
 
-                значение тиража не слетает,
-
-результат записан ниже в строке  розовым цветом
+                
+                значение тиража не слетает, результат выводится на экран слева в строке  зеленым цветом, а поле ввода обнуляется для следующего расчёта
        
          </li>
 
@@ -151,12 +230,12 @@
 
             <li>
    
-               <p><a href="javascript:flipflop('an');">вы вводите один тираж, а на экране выводится другой? </a></p> 
+               <p><a href="javascript:flipflop('an');"><p style="color:rgb(36, 163, 60)"></p>вы вводите один тираж, а на экране выводится другой? </a></p> 
               
                <ul id="an" style="display: none;">
                  <li><div id="browse_app">
    
-                  Всё нормально, алгоритм ориентируется на min или max тиражи
+                  Всё нормально, алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального
           
             </li>
    
@@ -170,46 +249,14 @@
 </html>
 
 
-
-
-<div class="container-fluid">
-    <table class="table table-striped table-sm" id="my_products">  
-        <thead>
-            <tr>
-                <th>Размер</th>
-                <th>Дата изготовления</th>
-                <th>Тираж(шт.)</th>
-                <th>Цена(руб.)</th>
-                
-                
-            </tr>
-        </thead>
-        <tbody>
-           
-        
-
-               
-          
   
-        
-        <tr>
-            <td><p style="color:rgb(229, 152, 147)">{{product.box_size}}</p></td>
-            <td><p style="color:rgb(229, 152, 147)">{{product.timeplus}}</p></td>
-            <td><p style="color:rgb(229, 152, 147)">{{product.tirazh}}</p></td>
-            <td><p style="color:rgb(229, 152, 147)">{{product.calc}}</p></td>
-        
-
-        </tr>
+  
        {% endfor %}
         </tbody>
     </table>
 
 </div>
 {% endblock content %}
-
-
-
-
 
 
 {% block javascript %}
@@ -339,3 +386,6 @@
     var res = e*x; }
     document.getElementById("result").innerHTML = res;
 </script> 
+
+
+
