--- a/products/templates/products/quality.html
+++ b/products/templates/products/quality.html
@@ -1,17 +1,18 @@
 {% extends 'products/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="card-body">
-<ul class="list-group list-group-flush"></ul>
-<div class="container mt-5">
-   <div class="row">
-      <div class="col-md-9">
-         
-         <div class="card mb-5" style="height: auto">
-            <div class="card-body">
-               <h4 class="mb-3">отличное качество <span class="text-muted"></span></h4>
-               <form method="POST">
-              
+{% autoescape off %}
+To initiate the password reset process for your {{ user.get_username }} TestSite Account,
+click the link below:
+
+{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+
+If clicking the link above doesn't work, please copy and paste the URL in a new browser
+window instead.
+
+Sincerely,
+The TestSite Team
+{% endautoescape %}
 
 
 
