--- a/products/templates/products/delivery.html
+++ b/products/templates/products/delivery.html
@@ -5,7 +5,7 @@
 
 
 
-<h3 class="text-center"><br><br><br>Стоимость доставки расчитывается отдельно и составляет от 400 рублей за груз до 5 кг (<i class="fas fa-walking"></i>) 
+<h3 class="text-center"><br><br><br><h3>Стоимость доставки расчитывается отдельно и составляет от 400 рублей за груз до 5 кг (<i class="fas fa-walking"></i>) 
    и от 1500 рублей (<i class="fas fa-truck"></i>)за груз от 5 килограмм в зависимости от веса и расстояния и времени суток по г. Москве. Доставка в другие города рассчитывается согласно тарифам транспортной компании конкретного региона.
 
 </h3>
