--- a/products/templates/products/rest.html
+++ b/products/templates/products/rest.html
@@ -13,6 +13,14 @@
     
     
     {% block content %}
+
+
+
+
+
+
+                          
+   </div>
     
     <h5 class="text-center"><span class="text-muted">
       
@@ -27,7 +35,7 @@
   }
   a:visited {
   
-    color:	#808080; /* Цвет посещенных ссылок */
+    color:	#0c6e0c; /* Цвет посещенных ссылок */
   }
   a:active {
    color: #f00; /* Цвет активной ссылки */ 
@@ -43,169 +51,93 @@
 
 <ul id="menu">
   
+  
     
         <li><a href="/products_by_category/16/">визитные карточки</a></li>
-        <li><a href="/products_by_category/10/">журналы</a></li>
+        <li><a href="/products_by_category/1/">коробки</a></li>
+<li><a href="/products_by_category/11/">лента</a></li>
+        <li><a href="/products_by_category/11/">листовки</a></li>
+        <li><a href="/products_by_category/15/">меню</a></li>
+        <li><a href="/products_by_category/14/"> мобильные стенды</a></li>
+        <li><a href="/products_by_category/18/">наклейки</a></li>
+        <li><a href="/products_by_category/20/">пакеты</a></li>
+        <li><a href="/products_by_category/3/">папки</a></li>
+        <li><a href="/products_by_category/12/">постеры</a></li>
+ <li>плейсменты</a></li>
+        <li><a href="/products_by_category/17/">приглашения</a></li>
+        <li><a href="/products_by_category/14/">ролл апы</a></li>
+ <li>стаканчики</a></li>
+ <li><a href="/products_by_category/15/">тейблтенты</a></li>
+        <li><a href="/products_by_category/11/">флаеры</a></li>
+        <li><a href="/products_by_category/15/">этикетки</a></li>
   
-      <li><a href="/products_by_category/21/">конверты</a></li>
-      <li><a href="/products_by_category/1/">коробки</a></li>
-      
-      <li><a href="/products_by_category/11/">листовки</a></li>
-      <li><a href="/products_by_category/18/">наклейки</a></li>
-      
-  <li><a href="/products_by_category/20/">пакеты</a></li>
-      <li><a href="/products_by_category/3/">папки</a></li>
-  
-      
-      <li><a href="/products_by_category/12/">постеры</a></li>
-      <li><a href="/products_by_category/17/">приглашения</a></li>
-
-
-      <li><a href="/products_by_category/14/">ролл апы</a></li>
-    <li><a href="/products_by_category/15/">этикетки</a></li>
-    <li><a href="/products_by_category/15/">меню</a></li>
-    <li><a href="/products_by_category/15/">папки для чеков</a></li>
-    <li><a href="/products_by_category/15/">папки для меню</a></li>
-    <li><a href="/products_by_category/15/"> коробки для тортов</a></li>
-
 
   </ul>
 
 </nav>
+
+
+<div class="container">
+  <div class="row padded">
+ 
+ 
+     <div class="col-lg-8 col-md-6 col-sm-12 col-xs-12">
+       <div class="block2">  <div class="col-md-7 "><div class="top-cover center-block"></div><p class="top-name center-block text-center"> 
+      
+        <h5><p 
+        <br><p>•	 Вы  задаете нам вопросы,
+            <p>•	Мы вместе уточняем детали, сразу подбираем решение,
+                <p>•	На нашем сайте находим все интересующие вас полиграфические позиции,
+                    <p>•	Мгновенно определяем тираж, цену и сроки производства.      <br> <br>
+                    </div>
+     </div>
+    </div>
    
-     <br>
-
-     <h1>Мы вместе с вами найдем лучшие полиграфические решения для вашего ресторана или кафе, а после (для повторных заказов) полностью автоматизируем процесс, при лучшем соотношении цена/качество</h1>
 
 
-      <div class="row">
+     
 
 
-        <h3><p class="text-center" > В ресторанном бизнесе достаточно своих хлопот, 
-            однако, для продвижения бренда,
-            необходимо понимать какую упаковку или этикетку лучше
-            выбрать, какие заказать пакеты, меню, папки для чеков, а если дело коснется разработки упаковки, тогда вообще можно растеряться. Не нужно расстраиваться. Мы предлагаем следующую стратегию: <br> 
-            <br><p>•	 Вы  задаете нам вопросы,
-                <p>•	Мы вместе уточняем детали, сразу подбираем решение,
-                    <p>•	На нашем сайте находим все интересующие вас полиграфические позиции,
-                        <p>•	Мгновенно определяем тираж, цену и сроки производства.
-                            <br><br>  {% thumbnail  "350" as im %}
 
 
+      
+
+       
+                             {% thumbnail  "350" as im %}
+                    
+                    
 <img src="/media/products/ label.png" width="50%">
 
 
-{% endthumbnail %}
-                            <p>•	Добавляем  в счет
+ 
+<center> <h5><p>•	Считаем </center>
+  {% endthumbnail %}
+
+
                                                                     
 {% thumbnail  "350" as im %}
 
 
 <img src="/media/products/order.png" width="50%">
 
-{% endthumbnail %}
+{% endthumbnail %} 
+<center> <h5><p>•	Добавляем  в счет </center>
 
-                                <p>•	Осуществляем доставку
+  <h5><p style="color:rgb(229, 152, 147)">Мы вместе с вами найдем/разработаем лучшие полиграфические решения для вашего ресторана или кафе, а после полностью автоматизируем процесс  повторного заказа, при лучшем соотношении цена/качество</p></h4>
 
-
-                                    
-
-
-
-            
-      
-<p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a> 
-
-  <a href="/">
- 
-      <img src="/media/products/logo_rose.png" width="97" height="65">
- 
-  </a>
-
-<i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
-        <!-- <div class="card"> -->
-         <!-- <div class="card-img">
-          <img align="center" src="images/posts/polit.jpg" class="img-fluid">
-         </div> -->
+</div></div>
+<div>
+  <p style="color:rgb(36, 163, 60)"  class="text-center" class="text-muted"><br> <br><a style="color:rgb(36, 163, 60)"  href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a> 
     
-        {% for product in filter.qs %}
-      
-      <!-- <div class="tile__body list-default__parent"> -->
-    
-    
-        <div class="col-md-3 col-lg-3 col-sm-6">
-        
-    
-            <div class="card">
-             <div class="card-img">
-              <!-- <img align="center" src="{{ product.mainimage.url }}" class="img-fluid"> -->
-              <!-- <img align="center" src="media/{{ product.mainimage }}" class="img-fluid"> -->
-              <!-- { % thumbnail 'product.mainimage' "50" as im % } -->
-              
-                  {% thumbnail product.mainimage "300" as im %}
-                    <img align="center" src="{{ im.url }}" alt="not found" class="img-fluid">
-                    <!-- { % empty % }
-                    <p>No image</p> -->
-                {% endthumbnail %}
-             </div>
-    
-            <div class="card-body">
-            <H6 STYLE="font-family: 'Courier New'"></H6>
-             <h6 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(36, 163, 60)">{{ product.name }}></p></a></h6>
-     {{ product.preview_text}} 
-      
-      
-             <p class="card-text">
-    
-              
-              </p>
-             </div>
-    
-            </div>
-    
-    
-      
+    <a href="/">
+   
+        <img src="/media/products/logo_rose.png" width="97" height="65">
+   
+    </a>
+  <i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
+  
       </div>
-           
-        
-              
-            {% endfor %}
-    
-       </div>
-      </div>
-     </div>
-    </div>
-    </div>
-    </div>
-    
-      
-    
-    
-      <div>
-        <h6 class="text-center"></h6> 
-        
-        </div>
-    <br>
-    <br>
-    <br>
-    
-    <div 
-    
-
-    
-              </div>
+<div>
     
     {% endblock %}
-    
-    
-    
-    
-    
-    <body>
-    
-      <video controls loop>
-        <source src="media/box_production1.mp4" type="video/mp4">
-       
-        Your browser does not support the video tag.
-      </video>
-
+  
