pip freeze requirements.txt

--- a/products/templates/products/calc.html
+++ b/products/templates/products/calc.html
@@ -22,9 +22,11 @@
      <br>
       <div class="row">
 
-        <h1  style="color:rgb(206, 129, 87)" class="text-center" class="card-title"><br> Посчитать/заказать очень просто <br>  </h1></span>
 
-        <h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title"><br> Сначала на главном экране выбираем название нужной категории <br>  </h5></span>
+
+        <h1  style="color:rgb(229, 152, 147)" class="text-center" class="card-title"><br> Посчитать/заказать очень просто <br>  </h1></span>
+
+        <h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title"><br> Сначала на главном экране в разделе "Категории продуктов"выбираем название нужного продукта  <br>  </h5></span>
 
 
 
