--- a/products/templates/products/rest.html
+++ b/products/templates/products/rest.html
@@ -55,19 +55,19 @@
     
         <li><a href="/products_by_category/16/">визитные карточки</a></li>
         <li><a href="/products_by_category/1/">коробки</a></li>
-<li><a href="/products_by_category/11/">лента</a></li>
+        <li><a href="/products_by_category/26/">лента</a></li>
         <li><a href="/products_by_category/11/">листовки</a></li>
-        <li><a href="/products_by_category/15/">меню</a></li>
+        <li><a href="/products_by_category/11/">меню</a></li>
         <li><a href="/products_by_category/14/"> мобильные стенды</a></li>
         <li><a href="/products_by_category/18/">наклейки</a></li>
         <li><a href="/products_by_category/20/">пакеты</a></li>
         <li><a href="/products_by_category/3/">папки</a></li>
         <li><a href="/products_by_category/12/">постеры</a></li>
- <li>плейсменты</a></li>
+        <li><a href="/products_by_category/29/">плейсметы</a></li> 
         <li><a href="/products_by_category/17/">приглашения</a></li>
         <li><a href="/products_by_category/14/">ролл апы</a></li>
- <li>стаканчики</a></li>
- <li><a href="/products_by_category/15/">тейблтенты</a></li>
+        <li><a href="/products_by_category/27/"> бумажные стаканчики</a></li>
+        <li><a href="/products_by_category/28/">тейблтенты</a></li>
         <li><a href="/products_by_category/11/">флаеры</a></li>
         <li><a href="/products_by_category/15/">этикетки</a></li>
   
